--- a/style.css
+++ b/style.css
@@ -149,6 +149,12 @@ h3 {
   @media (min-width: 1366px) {
     h3 {
       font-size: 36px; } }
+  h3 a {
+    color: #2f3633;
+    text-decoration: none;
+    transition: color .35s ease-in-out; }
+    h3 a:hover {
+      color: #0b0d0c; }
 
 p {
   font-size: 22px; }
@@ -178,9 +184,10 @@ input[type=submit] {
   border-radius: 20px;
   border: none;
   color: #fff;
+  display: block;
   font-size: 15px;
   letter-spacing: 2px;
-  margin-top: 4%;
+  margin: 4% auto;
   padding: 15px;
   text-transform: uppercase;
   transition: background-color .15s ease-in-out; }
