--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,7 +32,7 @@ $phone-portrait: 360px;
 // Global Styles
 // =========================== //
 body {
-	background: $color-alto;
+	background-color: rgba($color-alto, 0.7);
 	color: $color-cod;
 	font-family: 'Karla', sans-serif;
 	text-align: center;
@@ -46,7 +46,6 @@ h1 {
 h3 {
 	font-size: 26px;
 	margin: 10px 0;
-	padding-bottom: 2%;
 
 	@media (min-width: $desktop) {
 		font-size: 36px;
